# ChangeLog for media-video/shrip
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/shrip/ChangeLog,v 1.1 2007/04/11 13:26:30 beandog Exp $

*shrip-0.3.0 (11 Apr 2007)

  11 Apr 2007; Steve Dibb <beandog@gentoo.org> +metadata.xml,
  +shrip-0.3.0.ebuild:
  Initial import, bug 174091
