@@ -1,12 +1,17 @@
 DIST shrip-0.3.0.tar.gz 387433 RMD160 ecfd7057642f8cb9c7a6501f5d783b8fbf286701 SHA1 b985178aa1f4a331d96cbecc76bab53957e8d295 SHA256 9027a06171ff881004333614993e30a4c1536121de32be37fc3a77fff87add7c
+DIST shrip-0.4.0.tar.gz 394672 RMD160 7dbe6631b8b9d486358f62a4d2f6c3aa1bb97c7f SHA1 14ad457a92701a993f5085cf3cc4a6a25b67c648 SHA256 a7d99be9a971c2251d54ab721b3f2fcf13d41a3e090b89eeb1d1d0460e693b52
 EBUILD shrip-0.3.0.ebuild 845 RMD160 de385f682a090181dc04f94636043c561402fd0c SHA1 094af0c37be6b4c0e22e8fbb9b789ed56201ee8a SHA256 de3ce30a38f522156022a1851d6535d28b5faac6a0e3b1333265d19b2f5cf496
 MD5 b240ffb94f624b6ae58ef05db7fe8dcc shrip-0.3.0.ebuild 845
 RMD160 de385f682a090181dc04f94636043c561402fd0c shrip-0.3.0.ebuild 845
 SHA256 de3ce30a38f522156022a1851d6535d28b5faac6a0e3b1333265d19b2f5cf496 shrip-0.3.0.ebuild 845
-MISC ChangeLog 351 RMD160 3501d5e91dc2d10026849540698b134e75257559 SHA1 4b35a1bac4c2dbdb291376936b55e19b87de8aae SHA256 c5b90a798e77995e22fdd16f07612813bf3b8f4ecc31b5b746a5f0d6f6e660fb
-MD5 56b060ff826575cbc19194b6265dcd18 ChangeLog 351
-RMD160 3501d5e91dc2d10026849540698b134e75257559 ChangeLog 351
-SHA256 c5b90a798e77995e22fdd16f07612813bf3b8f4ecc31b5b746a5f0d6f6e660fb ChangeLog 351
+EBUILD shrip-0.4.0.ebuild 862 RMD160 3edb7585728200281e7bcf26f9867f50d7106356 SHA1 1359aec0ad2bedb3cadf5d230a0ef8ec32512399 SHA256 a36dcc977ebba088a49aaf6b18f9e9c1f309b5051a083c2ce944c2d82e994838
+MD5 ef7518ca3275518dbe4b3ab0b20009c7 shrip-0.4.0.ebuild 862
+RMD160 3edb7585728200281e7bcf26f9867f50d7106356 shrip-0.4.0.ebuild 862
+SHA256 a36dcc977ebba088a49aaf6b18f9e9c1f309b5051a083c2ce944c2d82e994838 shrip-0.4.0.ebuild 862
+MISC ChangeLog 475 RMD160 ed8c7565d7604e6ed84d0f4b2da7545e875de96e SHA1 978f2723bf44dff02d057b26eb73fe5ad22e510b SHA256 d6310db51f987d3ca0424aecf00c10f03242fb80f450a63e61442c6dad0537c6
+MD5 8c838a468504a1749b8c534b1cbdf6bb ChangeLog 475
+RMD160 ed8c7565d7604e6ed84d0f4b2da7545e875de96e ChangeLog 475
+SHA256 d6310db51f987d3ca0424aecf00c10f03242fb80f450a63e61442c6dad0537c6 ChangeLog 475
 MISC metadata.xml 380 RMD160 d2b63fc7b96b0de1978f06fd8f70a8a55f9c80e7 SHA1 8709d1b5015b382503025066890eecee94efffc7 SHA256 70617929adf4909735883031a2a9c86ea5e808f4bee7037ecca3c490d68c74bd
 MD5 949f6911677e3fd917e59df12a09905c metadata.xml 380
 RMD160 d2b63fc7b96b0de1978f06fd8f70a8a55f9c80e7 metadata.xml 380
@@ -14,3 +19,6 @@ SHA256 70617929adf4909735883031a2a9c86ea5e808f4bee7037ecca3c490d68c74bd metadata
 MD5 9b3d5cde08296ab06bf9d804d9cf81e4 files/digest-shrip-0.3.0 235
 RMD160 c8485b02efafb1c5e89f4efad32152e5417598b3 files/digest-shrip-0.3.0 235
 SHA256 7b09915947a079c07491d290a220d0c924bc0ab6912c4f82509c1d3338521fe7 files/digest-shrip-0.3.0 235
+MD5 f4a56cce812b37a291aab83f3cfcd20c files/digest-shrip-0.4.0 235
+RMD160 15b0f4979781406c022b1b9c95e2bbe0d98806c4 files/digest-shrip-0.4.0 235
+SHA256 4b20d88582b67bd9273c1f303e1a6551faedf7e628ae1801e05cf6f6a962ab7e files/digest-shrip-0.4.0 235
