@@ -1,0 +1,3 @@
+MD5 9413d5e93548527ef295fcfa52b84594 shrip-0.4.0.tar.gz 394672
+RMD160 7dbe6631b8b9d486358f62a4d2f6c3aa1bb97c7f shrip-0.4.0.tar.gz 394672
+SHA256 a7d99be9a971c2251d54ab721b3f2fcf13d41a3e090b89eeb1d1d0460e693b52 shrip-0.4.0.tar.gz 394672
